--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ https://templatemo.com/tm-464-ultra-profile
 							<br>
 					<br>
 					<p>Hello there,</p>
-					<p>Introduction: I'm a hardworking and ambitious individual with a great passion for the Infomation & Technology industry.
+					<p>Introduction: I'm a hardworking and ambitious individual with a great passion for the Information & Technology industry.
 					and <strong>Like to help your IT related works...</strong>  Let us work together. Thank you.</p>
 					
 			
@@ -369,7 +369,7 @@ https://templatemo.com/tm-464-ultra-profile
 					<img src="https://res.cloudinary.com/dff4rbfkn/image/upload/v1636855360/my_xc08oz.jpg" width="20%" height="20%" > 
 					<p>
 					
-					My name is M.K. Buddhi Kaushalya. I'm a hardworking and ambitious individual with a great passion for the Infomation & Technology industry. Currently I'm a undergraduate of SLIIT in specialization of BSc Infomation & Technology. (2nd Year, Class of 2020)
+					My name is M.K. Buddhi Kaushalya. I'm a hardworking and ambitious individual with a great passion for the Information & Technology industry. Currently I'm a undergraduate of SLIIT in specialization of BSc Infomation & Technology. (2nd Year, Class of 2020)
 					<p>I'm skilled in both Software and Hardware. Moreover, I m Interested in web designing, desktop application development, Mobile application development, and Microsoft office package as well.</p>
 					<p>Leadership, teamwork, coding, creative thinking, and better communication skills are enabling me to effectively work with a wide range of people.</p>
 				</div>
