--- a/index.html
+++ b/index.html
@@ -56,6 +56,65 @@ https://templatemo.com/tm-464-ultra-profile
 	</div>
 	<!-- END NAVIGATION -->
 
+	<div class="snowflakes" aria-hidden="true">
+  <div class="snowflake">
+  ❅
+  </div>
+  <div class="snowflake">
+  ❆
+  </div>
+  <div class="snowflake">
+  ❅
+  </div>
+  <div class="snowflake">
+  ❆
+  </div>
+  <div class="snowflake">
+  ❅
+  </div>
+  <div class="snowflake">
+  ❆
+  </div>
+  <div class="snowflake">
+    ❅
+  </div>
+  <div class="snowflake">
+    ❆
+  </div>
+  <div class="snowflake">
+    ❅
+  </div>
+  <div class="snowflake">
+    ❆
+  </div>
+  <div class="snowflake">
+    ❅
+  </div>
+  <div class="snowflake">
+    ❆
+  </div>
+    <div class="snowflake">
+			❅
+  </div>
+  <div class="snowflake">
+			❆
+  </div>
+  <div class="snowflake">
+			❅
+  </div>
+  <div class="snowflake">
+			❆
+  </div>
+  <div class="snowflake">
+			❅
+  </div>
+  <div class="snowflake">
+			❆
+  </div>
+</div>
+	
+	
+	
 	<!-- START HOME -->
 	<section id="home" class="templatemo-home">
 		<div class="container">
