--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ https://templatemo.com/tm-464-ultra-profile
   <strong> <img src="https://res.cloudinary.com/dff4rbfkn/image/upload/v1637295286/unnamed_gves7g.gif" width="8%" height="8%" ></strong><h6> Christmas Offers : Now You Can Get 50% Discount </h6>  
   
 <a class="btn btn-default" href="mailto:buddhi.kaushalya.infor.helps.works@gmail.com?Subject=Apply%20For%20Discount&body=I%20Like %20To%20Upgrade%20The%20Service ">Apply For Upgrading </a>
-					  <button type="button" class="close blink_me" data-dismiss="alert">Click to close the Ad. </button>	
+					<br>  <button type="button" class="close blink_me" data-dismiss="alert">Click [X] to close the Ad. </button>	
 </div>
 	
 	<!-- START HOME -->
