--- a/bwCheck.html
+++ b/bwCheck.html
@@ -72,11 +72,11 @@
   margin-right: auto;">
   <tr>
     <td><h3>Checking Browser Compatibility...</h3></th>
-    <td><img src="https://res.cloudinary.com/dff4rbfkn/image/upload/v1638612199/bw_r6fztt.gif" ></th>
+    <td><img src="https://res.cloudinary.com/dff4rbfkn/image/upload/v1638612199/bw_r6fztt.gif" height="50%" width="50%"></th>
   </tr>
    <tr>
     <td><h3>Monitor Responsiveness: (checking..)</h3></th>
-    <td><img src="https://res.cloudinary.com/dff4rbfkn/image/upload/v1638612199/bw_r6fztt.gif"  ></th>
+    <td><img src="https://res.cloudinary.com/dff4rbfkn/image/upload/v1638612199/bw_r6fztt.gif"  height="50%" width="50%"></th>
   </tr>
   
   
