--- a/index.html
+++ b/index.html
@@ -543,8 +543,9 @@ https://templatemo.com/tm-464-ultra-profile
 						<h2>This is <strong>me</strong></h2>
 						<h1 class="tm-red-text">M.K.B. <strong>Kaushalya</strong></h1>
 					</div>
-					<img src="https://res.cloudinary.com/dff4rbfkn/image/upload/v1639713554/262377139_421872572759960_7040425023007296637_n_lghrjr.jpg" width="20%" height="20%" > 
-					<p>
+					<central>
+					<img src="https:///res-console.cloudinary.com/dff4rbfkn/thumbnails/transform/v1/image/upload/v1639713837/https:///res-console.cloudinary.com/dff4rbfkn/thumbnails/transform/v1/image/upload//v1639713837/MjYyMzc3MTM5XzQyMTg3MjU3Mjc1OTk2MF83MDQwNDI1MDIzMDA3Mjk2NjM3X25fbGdocmpy/drilldown" width="20%" height="20%" > 
+					</central><p>
 					
 					My name is M.K. Buddhi Kaushalya. I'm a hardworking and ambitious individual with a great passion for the Information & Technology industry. Currently I'm a undergraduate of SLIIT in specialization of BSc Infomation & Technology. (3er Year, Class of 2020)
 					<p>I'm skilled in both Software and Hardware. Moreover, I m Interested in web designing, desktop application development, Mobile application development, and Microsoft office package as well.</p>
