--- a/index.html
+++ b/index.html
@@ -388,13 +388,13 @@ div#slider figure {
 									<div class="portfolio-thumb">
 										<img src="https://res.cloudinary.com/dff4rbfkn/image/upload/c_scale,h_253,w_420/v1640398617/m_e06bqs.png" class="fluid-img" alt="portfolio img" height="200%">
 										<div class="portfolio-overlay">
-											<h3 class="portfolio-item-title">Password Recovery System</h3>
-											<p><h4>I created a password recovery system with Email verification. Node.JS, React.JS, Nodemailer, Google API have been used </h4></p>
+											<h3 class="portfolio-item-title">WeatherApp</h3>
+											<p><h4>web app for Weather displaying. OpenWeather APIs have been used </h4></p>
 											
 											</div>
 											
 									</div>
-									<h3 class="portfolio-item-title">Password Recovery System</h3>
+									<h3 class="portfolio-item-title">WeatherApp</h3>
 								</div>
 								<div class="iso-box html wordpress mobile col-md-3 col-sm-3 col-xs-12">
 								<i class="fas fa-thumbtack"></i>
@@ -412,11 +412,11 @@ div#slider figure {
 									<div class="portfolio-thumb">
 										<img src="https://res.cloudinary.com/dff4rbfkn/image/upload/c_scale,h_211,w_381/v1640398195/Screenshot_2021-12-25_073931_fkozvu.png" alt="portfolio img">
 										<div class="portfolio-overlay">
-											<h3 class="portfolio-item-title">Email Verification System<h3>
-											<p><h4>I made an email verification system. Node.JS, React.JS, Nodemailer, Google API have been used</h4></p>
+											<h3 class="portfolio-item-title">Image Editor<h3>
+											<p><h4>this is a simple application for change the image light level, brightness level and etc. HTML, CSS used</h4></p>
 											</div>
 									</div>
-									<h3 class="portfolio-item-title">Email Verification System<h3>
+									<h3 class="portfolio-item-title">Image Editor<h3>
 								</div>
 								<div class="iso-box wordpress col-md-3 col-sm-3 col-xs-12">
 								<i class="fas fa-thumbtack"></i>
